notizia_gen/tests/compile_fail/request_wrong_param_name.rs
use notizia_gen::message;

#[message]
enum TestMsg {
    #[request(response = u32)]
    GetValue,
}

fn main() {}
